--- a/java_ee_factoryapi/pom.xml
+++ b/java_ee_factoryapi/pom.xml
@@ -4,9 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.jrdatabasetools.dbworkbench.examples</groupId>
+		<groupId>com.jr-database-tools.dbworkbench.examples</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.5.23</version>
+		<version>2.5.24</version>
 	</parent>
 
 	<artifactId>java_ee_factoryapi</artifactId>
