--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.jrdatabasetools.dbworkbench.examples</groupId>
+	<groupId>com.jr-database-tools.dbworkbench.examples</groupId>
 	<artifactId>parent</artifactId>
-	<version>2.5.23</version>
+	<version>2.5.24</version>
 	<packaging>pom</packaging>
 
 	<description>Examples of using PL/SQL Enterprise Workbench Connector Builders.</description>
@@ -27,7 +27,7 @@
 		<com.oracle.database_version>19.10.0.0</com.oracle.database_version>
 		<org.junit.jupiter_version>5.7.1</org.junit.jupiter_version>
 		<build-helper-maven-plugin_version>3.2.0</build-helper-maven-plugin_version>
-		<connectorbuilder-maven-plugin_version>2.5.23</connectorbuilder-maven-plugin_version>
+		<connectorbuilder-maven-plugin_version>2.5.24</connectorbuilder-maven-plugin_version>
 		<javax.annotation-api_version>1.3.2</javax.annotation-api_version>
 		<maven-surefire-plugin_version>2.22.2</maven-surefire-plugin_version>
 		<maven-assembly-plugin_version>3.3.0</maven-assembly-plugin_version>
