--- a/rmi_factoryapi/rmi_factoryapi_client/pom.xml
+++ b/rmi_factoryapi/rmi_factoryapi_client/pom.xml
@@ -4,16 +4,16 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.jrdatabasetools.dbworkbench.examples</groupId>
+		<groupId>com.jr-database-tools.dbworkbench.examples</groupId>
 		<artifactId>rmi_factoryapi</artifactId>
-		<version>2.5.23</version>
+		<version>2.5.24</version>
 	</parent>
 
 	<artifactId>rmi_factoryapi_client</artifactId>
 
 	<dependencies>
 		<dependency>
-			<groupId>com.jrdatabasetools.dbworkbench.examples</groupId>
+			<groupId>com.jr-database-tools.dbworkbench.examples</groupId>
 			<artifactId>rmi_factoryapi_server</artifactId>
 			<version>${project.version}</version>
 		</dependency>
