--- a/rmi_factoryapi/rmi_factoryapi_server/pom.xml
+++ b/rmi_factoryapi/rmi_factoryapi_server/pom.xml
@@ -4,9 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.jrdatabasetools.dbworkbench.examples</groupId>
+		<groupId>com.jr-database-tools.dbworkbench.examples</groupId>
 		<artifactId>rmi_factoryapi</artifactId>
-		<version>2.5.23</version>
+		<version>2.5.24</version>
 	</parent>
 
 	<artifactId>rmi_factoryapi_server</artifactId>
