--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.jr-database-tools.dbworkbench.examples</groupId>
 	<artifactId>parent</artifactId>
-	<version>2.5.28</version>
+	<version>2.5.29</version>
 	<packaging>pom</packaging>
 
 	<description>Examples of using PL/SQL Enterprise Workbench Connector Builders.</description>
@@ -13,7 +13,7 @@
 
 	<properties>
 		<!-- database credentials and configuration parameters -->
-		<dbw_examples.url>jdbc:oracle:thin:@192.168.0.102:1521/orcl</dbw_examples.url>
+		<dbw_examples.url>jdbc:oracle:thin:@192.168.0.109:1521/orclpdb1</dbw_examples.url>
 		<dbw_examples.username>dbw_examples</dbw_examples.username>
 		<dbw_examples.password>dbw_examples</dbw_examples.password>
 
@@ -21,26 +21,25 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- version dependencies -->
-		<connectorbuilder-maven-plugin_version>2.5.28</connectorbuilder-maven-plugin_version>
+		<connectorbuilder-maven-plugin_version>2.5.29</connectorbuilder-maven-plugin_version>
 
-		<com.oracle.database_version>21.5.0.0</com.oracle.database_version>
+		<com.oracle.database_version>21.7.0.0</com.oracle.database_version>
 
 		<javax.annotation-api_version>1.3.2</javax.annotation-api_version>
 
-		<org.junit.jupiter_version>5.8.2</org.junit.jupiter_version>
+		<org.junit.jupiter_version>5.9.0</org.junit.jupiter_version>
 
 		<build-helper-maven-plugin_version>3.3.0</build-helper-maven-plugin_version>
 		<maven-compiler-plugin_version>3.10.1</maven-compiler-plugin_version>
 		<maven-surefire-plugin_version>2.22.2</maven-surefire-plugin_version>
-		<maven-assembly-plugin_version>3.3.0</maven-assembly-plugin_version>
+		<maven-assembly-plugin_version>3.4.2</maven-assembly-plugin_version>
 		<exec-maven-plugin_version>3.0.0</exec-maven-plugin_version>
 		<maven-war-plugin_version>3.3.2</maven-war-plugin_version>
 		<maven-ejb-plugin_version>3.2.1</maven-ejb-plugin_version>
-		<maven-surefire-plugin_version>2.22.2</maven-surefire-plugin_version>
 		<maven-dependency-plugin_version>3.3.0</maven-dependency-plugin_version>
 
-		<org.springframework_version>5.3.20</org.springframework_version>
-		<org.springboot_version>2.7.0</org.springboot_version>
+		<org.springframework_version>5.3.23</org.springframework_version>
+		<org.springboot_version>2.7.3</org.springboot_version>
 
 		<!-- Java compiler version -->
 		<maven.compiler.target>11</maven.compiler.target>
