--- a/rmi_springapi/rmi_springapi_client/pom.xml
+++ b/rmi_springapi/rmi_springapi_client/pom.xml
@@ -1,75 +1,81 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.jr-database-tools.dbworkbench.examples</groupId>
-		<artifactId>rmi_springapi</artifactId>
-		<version>2.5.38</version>
-	</parent>
+  <parent>
+    <groupId>com.jr-database-tools.dbworkbench.examples</groupId>
+    <artifactId>rmi_springapi</artifactId>
+    <version>2.5.39</version>
+  </parent>
 
-	<artifactId>rmi_springapi_client</artifactId>
+  <artifactId>rmi_springapi_client</artifactId>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.jr-database-tools.dbworkbench.examples</groupId>
-			<artifactId>rmi_springapi_server</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+  <dependencies>
+    <dependency>
+      <groupId>com.jr-database-tools.dbworkbench.examples</groupId>
+      <artifactId>rmi_springapi_server</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
-		<!-- spring -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+    <!-- spring -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
 
-		<!-- JUnit 5 -->
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-params</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+    <!-- Annotation -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+    </dependency>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>com.jr-database-tools.dbworkbench</groupId>
-				<artifactId>connectorbuilder-maven-plugin</artifactId>
-				<configuration>
-					<connectorBuilderName>rmi_springapi</connectorBuilderName>
+    <!-- JUnit 5 -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>com.jr-database-tools.dbworkbench</groupId>
+        <artifactId>connectorbuilder-maven-plugin</artifactId>
+        <configuration>
+          <connectorBuilderName>rmi_springapi</connectorBuilderName>
           <url>${dbw_examples.url}</url>
           <user>${dbw_examples.username}</user>
           <password>${dbw_examples.password}</password>
           <info>all</info>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<executions>
-					<!-- start docker -->
-					<execution>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <executions>
+          <!-- start docker -->
+          <execution>
             <id>docker-compose-start</id>
             <phase>process-test-classes</phase>
             <goals>
@@ -86,23 +92,23 @@
             </configuration>
           </execution>
 
-					<!-- wait until docker started -->
-					<execution>
-						<id>wait-until-docker-is-started</id>
-						<phase>process-test-classes</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<configuration>
-							<executable>ping</executable>
-							<workingDirectory>${project.basedir}</workingDirectory>
-							<arguments>
-								<argument>localhost</argument>
-								<argument>${ping.count.parameter}</argument>
-								<argument>15</argument>
-							</arguments>
-						</configuration>
-					</execution>
+          <!-- wait until docker started -->
+          <execution>
+            <id>wait-until-docker-is-started</id>
+            <phase>process-test-classes</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <executable>ping</executable>
+              <workingDirectory>${project.basedir}</workingDirectory>
+              <arguments>
+                <argument>localhost</argument>
+                <argument>${ping.count.parameter}</argument>
+                <argument>15</argument>
+              </arguments>
+            </configuration>
+          </execution>
 
           <!-- stop docker -->
           <execution>
@@ -120,8 +126,8 @@
               </arguments>
             </configuration>
           </execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
