--- a/spring_http_remoting/spring_http_remoting_client/pom.xml
+++ b/spring_http_remoting/spring_http_remoting_client/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.jr-database-tools.dbworkbench.examples</groupId>
 		<artifactId>spring_http_remoting</artifactId>
-		<version>2.5.38</version>
+		<version>2.5.39</version>
 	</parent>
 
 	<artifactId>spring_http_remoting_client</artifactId>
@@ -45,6 +45,12 @@
 			<artifactId>junit-jupiter-engine</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+      <!-- Annotation -->
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+      </dependency>
 	</dependencies>
 
 	<build>
